<resources>
    <string name="app_name">SumTwoNumbers_MVC-MVP-MVVM</string>
    <string name="mvc">MVC</string>
    <string name="mvp">MVP</string>
    <string name="mvvm">MVVM</string>
    <string name="title_mvc">Tính thương hai số theo mô hình MVC</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="result">Result</string>
    <string name="mvp_title">Tính thương hai số theo mô hình MVP</string>
    <string name="div">÷</string>
    <string name="difference_0">Số chia phải khác 0</string>
    <string name="one_value">1</string>
</resources>