<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mvcPattern"
        style="@style/HomeHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/mvc_blue"
        android:text="@string/mvc"
        app:layout_constraintBottom_toTopOf="@id/mvpPattern"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mvpPattern"
        style="@style/HomeHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/mvp_Blue"
        android:text="@string/mvp"
        app:layout_constraintBottom_toTopOf="@id/mvvmPattern"
        app:layout_constraintTop_toBottomOf="@id/mvcPattern" />

    <TextView
        android:id="@+id/mvvmPattern"
        style="@style/HomeHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/mvvm_yellow"
        android:text="@string/mvvm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mvpPattern" />

</androidx.constraintlayout.widget.ConstraintLayout>