<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MvcActivity">

    <TextView
        android:id="@+id/mvcTitle"
        style="@style/DetailPattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_mvc"
        android:textColor="@color/mvc_blue"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/soHangA"
        style="@style/DetailPattern.content"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@null"
        android:hint="@string/zero"
        app:layout_constraintTop_toBottomOf="@+id/mvcTitle" />

    <TextView
        android:id="@+id/addMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/soHangA" />

    <EditText
        android:id="@+id/soHangB"
        style="@style/DetailPattern.content"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@null"
        android:hint="@string/zero"
        app:layout_constraintTop_toBottomOf="@+id/addMark" />

    <TextView
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/result"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/result" />

    <TextView
        android:id="@+id/result"
        style="@style/DetailPattern.content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/zero"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/equals"
        app:layout_constraintTop_toBottomOf="@id/soHangB" />

</androidx.constraintlayout.widget.ConstraintLayout>